11049
Thanks for verifying that some features used to work.
```scala
Welcome to Scala version 2.11.0 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0).
Type in expressions to have them evaluated.
Type :help for more information.

scala> object Foo { def foo = 1000 }
defined object Foo

scala> Foo.   // OK
asInstanceOf   foo   isInstanceOf   toString

scala> import Foo._
import Foo._

scala> foo    // OK
foo

scala> foo
res0: Int = 1000

scala> :pa -raw
// Entering paste mode (ctrl-D to finish)

package om { object Obj { def foodie = 42 }}

// Exiting paste mode, now interpreting.

scala> import om.Obj
import om.Obj

scala> foo
<console>:9: error: not found: value foo
              foo
              ^

scala> import math.cos  // OK
cos   cosh

scala> import math.cos
import math.cos

scala> co    // no cos
com   collection   compat   concurrent

scala> co    // double-tab
com   conforms   collection   compat   concurrent

scala> import concurrent._
import concurrent._

scala> Fut     // no Future at all
<console>:16: error: not found: value Fut
              Fut
              ^
```

